--- a/order/order-common/pom.xml
+++ b/order/order-common/pom.xml
@@ -4,23 +4,25 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.springcloud</groupId>
-        <artifactId>manager</artifactId>
+        <artifactId>order</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>order</artifactId>
+    <artifactId>order-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>order</name>
+    <name>order-common</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
-    <modules>
-        <module>order-provider</module>
-        <module>order-consumer</module>
-        <module>order-common</module>
-    </modules>
+    </dependencies>
 
 
 </project>
