--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
     <modules>
         <module>eureka</module>
         <module>order</module>
-        <module>consumer</module>
         <module>config</module>
         <module>product</module>
     </modules>
@@ -97,12 +96,26 @@
         </dependencies>
     </dependencyManagement>
     <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
+            <resources>
+<!--                <resource>-->
+<!--                    <directory>src/main/java</directory>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/*.java</exclude>-->
+<!--                    </excludes>-->
+<!--                </resource>-->
+                <resource>
+                    <directory>src/main/resources</directory>
+                    <includes>
+                        <include>**/*.*</include>
+                    </includes>
+                </resource>
+            </resources>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <filtering>true</filtering>-->
+<!--            </resource>-->
+<!--        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
