1、增加spring admin 模块 2、增加actor监控 3、集成mybatis-plus 4、处理日志

--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -11,3 +11,8 @@ spring:
     restart:
       enabled: true
       additional-paths: src/main/java
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
