--- a/config/src/main/resources/bootstrap.yml
+++ b/config/src/main/resources/bootstrap.yml
@@ -9,3 +9,5 @@ spring:
           username: m13830711129_1@163.com
           password: Fengfeng0525
           default-label: master
+logging:
+  file: logs/out.log
