--- a/order/order-consumer/pom.xml
+++ b/order/order-consumer/pom.xml
@@ -14,6 +14,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.springcloud</groupId>
             <artifactId>order-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
