--- a/order/order-consumer/src/main/resources/application.yml
+++ b/order/order-consumer/src/main/resources/application.yml
@@ -3,21 +3,22 @@ server:
 spring:
   main:
     allow-bean-definition-overriding: true
-  application:
-    name: order-consumer
   devtools:
     restart:
       enabled: true
       additional-paths: src/main/java
 eureka:
-  instance:
-    prefer-ip-address: true
   client:
     service-url:
       defaultZone: http://localhost:20230/eureka/
 ribbon:
   eureka:
     enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 #feign:
 #  hystrix:
 #    enabled: true
