--- a/order/order-provider/src/main/resources/bootstrap.yml
+++ b/order/order-provider/src/main/resources/bootstrap.yml
@@ -1,6 +1,4 @@
 eureka:
-  instance:
-    prefer-ip-address: true
   client:
     service-url:
       defaultZone: http://localhost:20230/eureka/
@@ -16,3 +14,12 @@ spring:
       additional-paths: src/main/java
   profiles:
     active: dev
+server:
+  port: 20231
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+logging:
+  file: logs/out.log
