--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
         <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
         <druid.version>1.0.29</druid.version>
-        <mybatis-plus.version>3.3.1</mybatis-plus.version>
+        <mybatis-plus.version>3.2.0</mybatis-plus.version>
         <freemarker.version>2.3.28</freemarker.version>
+        <jolokia-core.version>1.6.2</jolokia-core.version>
     </properties>
 
 
@@ -23,6 +24,7 @@
         <module>order</module>
         <module>config</module>
         <module>product</module>
+        <module>admin</module>
     </modules>
 
     <dependencies>
@@ -43,11 +45,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jolokia/jolokia-core -->
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-generate</artifactId>
-            <version>2.3</version>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+            <version>${jolokia-core.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -56,13 +60,24 @@
     </dependencies>
     <!-- 依赖声明 -->
     <dependencyManagement>
+
         <dependencies>
-            <!-- mybatis-plus主版本管理  -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.freemarker</groupId>
                 <artifactId>freemarker</artifactId>
@@ -73,10 +88,7 @@
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-actuator</artifactId>
-            </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -96,20 +108,20 @@
         </dependencies>
     </dependencyManagement>
     <build>
-            <resources>
+<!--            <resources>-->
+<!--&lt;!&ndash;                <resource>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <directory>src/main/java</directory>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <exclude>**/*.java</exclude>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;                </resource>&ndash;&gt;-->
 <!--                <resource>-->
-<!--                    <directory>src/main/java</directory>-->
-<!--                    <excludes>-->
-<!--                        <exclude>**/*.java</exclude>-->
-<!--                    </excludes>-->
+<!--                    <directory>src/main/resources</directory>-->
+<!--                    <includes>-->
+<!--                        <include>**/*.*</include>-->
+<!--                    </includes>-->
 <!--                </resource>-->
-                <resource>
-                    <directory>src/main/resources</directory>
-                    <includes>
-                        <include>**/*.*</include>
-                    </includes>
-                </resource>
-            </resources>
+<!--            </resources>-->
 <!--        <resources>-->
 <!--            <resource>-->
 <!--                <directory>src/main/resources</directory>-->
@@ -140,11 +152,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <delimiters>
-                        <delimit>$</delimit>
-                    </delimiters>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <delimiters>-->
+<!--                        <delimit>$</delimit>-->
+<!--                    </delimiters>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
