1、处理订单添加失败的问题 2、增加创建时间和更新时间自动填充 3、处理模块间通讯的问题 4、响应结果处理

--- a/order/order-consumer/src/main/resources/application.yml
+++ b/order/order-consumer/src/main/resources/application.yml
@@ -19,7 +19,7 @@ management:
     web:
       exposure:
         include: "*"
-#feign:
-#  hystrix:
-#    enabled: true
+feign:
+  hystrix:
+    enabled: true
 #debug: true
