--- a/order/order-common/pom.xml
+++ b/order/order-common/pom.xml
@@ -26,6 +26,16 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.springcloud</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
     </dependencies>
 
