--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,17 @@
         <module>config</module>
         <module>product</module>
         <module>admin</module>
+        <module>common</module>
+        <module>hystrix</module>
     </modules>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
         <!-- 模板库 -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -51,7 +59,11 @@
             <artifactId>jolokia-core</artifactId>
             <version>${jolokia-core.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.springcloud</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
