--- a/product/src/main/resources/bootstrap.yml
+++ b/product/src/main/resources/bootstrap.yml
@@ -1,6 +1,4 @@
 eureka:
-  instance:
-    prefer-ip-address: true
   client:
     service-url:
       defaultZone: http://localhost:20230/eureka/
@@ -16,3 +14,8 @@ spring:
       additional-paths: src/main/java
   profiles:
     active: dev
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
