--- a/order/order-consumer/src/main/resources/application.yml
+++ b/order/order-consumer/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:20230/eureka/
+      defaultZone: http://eureka-server:20230/eureka/
 ribbon:
   eureka:
     enabled: true
