--- a/order/order-provider/pom.xml
+++ b/order/order-provider/pom.xml
@@ -6,10 +6,12 @@
         <groupId>com.springcloud</groupId>
         <artifactId>order</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>order-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>order-provider</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -93,6 +95,25 @@
 
     </dependencies>
 
-
+    <build>
+        <finalName>order-provider-server</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.springcloud.order.ProviderApplication</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
