--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -2,12 +2,12 @@ spring:
   application:
     name: admin-server
 server:
-  port: 20237
+  port: 33563
 eureka:
   client:
     registryFetchIntervalSeconds: 5
     service-url:
-      defaultZone: http://localhost:20230/eureka/
+      defaultZone: http://eureka-server:33560/eureka/
   instance:
     leaseRenewalIntervalInSeconds: 10
     health-check-url-path: /actuator/health
