--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,13 +1,15 @@
 server:
-  port: 20230
+  port: 33560
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:20230/eureka/
+      defaultZone: http://eureka-server:33560/eureka/
   server:
     enable-self-preservation: false
+  instance:
+    hostname: eureka-server
 
 spring:
   devtools:
